# matdecomp

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  data.txt  diagonalize.py  manim.cfg  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/hooks/: commit-msg
.github/workflows/: ci.yml  enforce-dev-merge.yml
part1/: determinant.py  gaussian.py  gaussian_eliminate.py  inverse.py  part1_demo.ipynb  rank_basis.py  test_determinant.py  test_gaussEliminate.py  test_gauss_elimination.ipynb  test_gaussian.py  test_inverse.py  test_rank_basis.ipynb  test_rank_basis.py
part2/: decomposition.py  diagonalization.py  manim_scene.py  manim_v2.py  narration_script.md  test_decomposition.ipynb  test_diagonalization.ipynb  test_diagonalization.py  theme.py
part2/manim/: inputs.txt  main.py  manim.cfg  manim_scene.py  manim_v2.py  scene_app.py  scene_compare.py  scene_intro.py  scene_svd.py  theme.py
part2/manim-prod-assets/: assets_attribution_list.md  narration_script.md  svd-animation-refs.md  svd-animation-rules.md  svd-cue-sheet.md
part3/: analysis.ipynb  benchmark.py  part3_demo.ipynb  results.csv  results_full.csv  solvers.py  test_solvers.ipynb
report/: report.tex  reportDoCS2025.cls  utilities.tex
report/chapters/: biblio.tex  chapter_01.tex  chapter_02.tex  chapter_03.tex  conclusion.tex  credits.tex
tests/: test_gauss_seidel.py
